Proofread and corrected errors. Added more Projects data. Need to make projectsSection mobile responsive.

--- a/gatsby-starter-default/src/components/general.scss
+++ b/gatsby-starter-default/src/components/general.scss
@@ -224,14 +224,13 @@ html{
 }
 .projectSectionContainer{
     display:flex;
-    flex-flow: row nowrap;
+    flex-direction: row;
     justify-content: center;
-    width: 100%;
-    
-    max-width: 100%;
-   
-    border: 0.1rem solid $dark-shadow-pos;
+    padding: 1rem 0.5rem;
     overflow-x: scroll;
+    width: 100%;
+    border: 0.1rem solid $dark-shadow-pos;
+    
     .projectCard:hover{
         border: solid $light-primary 0.05rem;
         animation: projectCardHover 0.025s;
@@ -248,10 +247,10 @@ html{
     display:flex;
     flex-flow: column nowrap;
     border: 0.05rem solid $dark-primary;
-    overflow-x: none;
+    overflow-x: clip;
     padding-bottom:1rem;
-    width:25%;
-    height: 25rem;
+    width: 40rem;
+    height: 20rem;
     overflow-y:scroll;
     box-shadow: 0rem 0rem 0.5rem $dark-primary;
     z-index:5;
@@ -280,6 +279,7 @@ html{
     border-bottom: 0.05rem black solid;
     width:100%;
     margin-top:0rem;
+    height: max-content;
     padding:0.8rem 1rem;
     border-bottom: 0.05rem solid $dark-primary;
     
@@ -311,6 +311,7 @@ html{
 .cardDescriptionDiv{
     display:flex; 
     flex-flow: column nowrap;
+    padding: 1rem;
     btn{
         padding: 0.4rem 0.6rem;
         letter-spacing:0.1rem;
@@ -321,14 +322,17 @@ html{
 .cardCollapsibleTree{
     display:flex;
     flex-flow: column nowrap;
+    padding:1rem;
 }
 .cardFeaturesDiv{
     display: flex;
     flex-flow: column nowrap;
+    padding:1rem;
 
 }
 .cardEntryDiv{
     list-style: decimal;
+    padding:1rem;
 
 }
 .cardEntryValue{
@@ -339,10 +343,12 @@ html{
 .cardStackDiv{
     display: flex;
     flex-flow: column nowrap;
+    padding:1rem;
 }
 .cardCapabilitiesDiv{
     display: flex;
     flex-flow: column nowrap;
+    padding:1rem;
 }
 
 
